--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3601,7 +3601,8 @@
 
 	#two {
 		padding: 6em 0 4em 0;
-		background: #f3f3f3
+		background: #f3f3f3a6;
+		
 		
 	}
 
@@ -3625,19 +3626,15 @@
 					padding-right: 6em;
 				}
 
-				/* #two .inner article:last-child {
-					padding-left: 6em;
-				} */
-
 		@media screen and (max-width: 980px) {
 
-			#two {
+			/* #two {
 				padding: 4em 0 2em 0;
 				background: -moz-linear-gradient(top, #f3f3f3 0%, #f3f3f3 50%, #f7f7f7 0%, #f7f7f7 100%);
 				background: -webkit-linear-gradient(top, #f3f3f3 0%, #f3f3f3 50%, #f7f7f7 0%, #f7f7f7 100%);
 				background: linear-gradient(to bottom, #f3f3f3 0%, #f3f3f3 50%, #f7f7f7 0%, #f7f7f7 100%);
 				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3f3f3', endColorstr='#f7f7f7',GradientType=0 );
-			}
+			} */
 
 				#two .inner {
 					-moz-flex-direction: column;
@@ -3655,10 +3652,6 @@
 							padding-bottom: 2em;
 						}
 
-						#two .inner article:last-child {
-							padding-left: 0;
-							padding-top: 2em;
-						}
 
 		}
 
